fix spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,6 @@ body {
   justify-content: center;
   height: 100%;
 }
-
 /*VVVVVVVVVVVVVVVVVV ABOUT SECTION VVVVVVVVVVVVVVVVVVVV*/
 .about {
   transition: 0.3s;
@@ -69,7 +68,6 @@ body {
   font-family: sans-serif;
   color: #82D4BB;
 }
-
 .panel img {
   width: 80%;
   transform: translate(10px, 10px);
@@ -122,10 +120,8 @@ body {
   border-radius: 50%;
   background-color: #022B3A;
   border: 5px solid black;
-
 }
 .circleStyle h1 {
-  /*text-align: center;*/
   padding-top: 80px;
   margin: 0;
   font-family: monospace;
@@ -206,10 +202,6 @@ body {
 .hiddenProjects{
   display: none;
 }
-/*TVBLUE#1C2541*/
-/*BUTTON#1A5B75*/
-/*buttonTEXT#5BC0BE*/
-/*aboutTEXT#82D4BB*/
 .projectPanel:nth-child(1){
   grid-column:  2 / 4;
   grid-row: 1 / 3;
@@ -231,7 +223,6 @@ body {
   grid-row: 5 / 6;
   transform: translate(2px, 34px);
 }
-
 /*^^^^^^^^^^^^^PROJECTS SECTION^^^^^^^^^^^^^^^^^^*/
 /*VVVVVVVVVVVCONTACT ME SECTIONVVVVVVVVVVVVVVVV*/
 .contact {
@@ -246,7 +237,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-
 }
 .contact.contactClicked{
   transition: 0.3s;
@@ -277,13 +267,6 @@ body {
   align-self: flex-end;
   transform: translate(0px, -32px);
 }
-/*.test{
-  height:2px;
-  width:100%;
-  background-color: black;
-  border-radius: 50%;
-}*/
-
 /*^^^^^^^^^CONTACT ME SECTION^^^^^^^^^^^^^^^^^^*/
 /*VVVVVVVVVV--INTRO SECTION--VVVVVVVVVVVVVVVVVV*/
 .intro {
@@ -305,12 +288,10 @@ body {
   font-size: 75px;
   /*color: rgba(255, 255, 255, 0.8);*/
 }
-
 @keyframes introFade{
   from {background-color: black; color: black;}
   to {background-color: #1e1e1e; color: rgba(255, 255, 255, 0.8);}
 }
-
 /*^^^^^^^^^^^^INTRO SECTION^^^^^^^^^^^^^^^^^^*/
 .backStyle {
   font-size: 35px;
@@ -403,6 +384,4 @@ body {
 .cord {
   transform: translate(154px, -130px);
   position: absolute;
-
-
 }
